--- a/one-book/pages/book/book.wxml
+++ b/one-book/pages/book/book.wxml
@@ -4,7 +4,7 @@
   <view class="weui-panel weui-panel_access">
     <view class="weui-panel__hd">我的收藏</view>
     <view class="weui-panel__bd">
-      <navigator  wx:for="{{list}}" url="../bookDetail/detail?id={{item.id}}&bName={{item.title}}&isbn={{item.isbn13}}" wx:key="{{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+      <navigator  wx:for="{{list}}" url="../detail/bookDetail?id={{item.id}}&bName={{item.title}}&isbn={{item.isbn13}}" wx:key="{{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{item.images.small}}" />
         </view>
